src/objects/HWS_Referral_Instruction_Event__e.object
<CustomObject>
    <fields>
        <fullName>HWS_ParentCase_Id__c</fullName>
        <description>NOKIASC-38090:this field created to fire event for bulk warranty hws case</description>
        <label>HWS ParentCase_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Referral_Instruction_Status__c</fullName>
        <label>HWS Referral Instruction Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWS_Source__c</fullName>
        <description>To differentiate from which source platform event is published like apex class or flow</description>
        <label>HWS Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>HWS Referral Instruction Event</label>
    <pluralLabel>HWS Referral Instruction Events</pluralLabel>
</CustomObject>